plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}plugins {
    id 'application'
    id 'java'
}

group = 'com.roguegame'
version = '1.0'

sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'org.openjfx:javafx-fxml:17'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
}

application {
    mainClass = 'com.roguegame.Main'
}

test {
    useJUnitPlatform()
}

run {
    jvmArgs += [
            '--module-path', "${System.properties['java.home']}/lib",
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
